# MeGA

./: CMakeLists.txt  README.md  main.cpp
ArrangementPipeline/: ArrangementFilterPipeline.h  ArrangementReadPipeline.h  ArrangementWritePipeline.h
DedupPipeline/: ChunkingPipeline.h  DeduplicationPipeline.h  Eliminator.h  HashingPipeline.h  ReadFilePipeline.h  WriteFilePipeline.h
MetadataManager/: MetadataManager.h
RestorePipeline/: RestoreDecomPipeline.h  RestoreParserPipeline.h  RestoreReadPipeline.h  RestoreWritePipeline.h
RollHash/: Gear.h  Rabin.h  RollHash.h  rabin_chunking.h
Test/: ReadPerformance.cpp
Utility/: BaseCache.h  BaseCache2.h  BufferedFileWriter.h  ChunkWriterManager.h  Config.h  ContainerConstructor.h  FileOperator.h  Likely.h  Lock.cpp  Lock.h  Manifest.h  Noncopyable.h  StorageTask.h
xdelta/: CMakeLists.txt  xdelta3-cfgs.h  xdelta3-decode.h  xdelta3-hash.h  xdelta3-list.h  xdelta3.cpp  xdelta3.h
